--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="{{url_for('extract')}}"><i class="bi bi-cloud-download-fill"></i>Pobierz produkt</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('prducts')}}"><i class="bi bi-list-stars"></i> Lista produktów</a>
+                            <a class="nav-link" href="{{url_for('product')}}"><i class="bi bi-list-stars"></i> Lista produktów</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for('author')}}"><i class="bi bi-person-circle"></i> O autorze</a>
@@ -46,9 +46,9 @@
 					<h2>{% block title %}{% endblock %}</h2>
                 </div>
             </div>
-            <div class = "row">
+            <div class="row">
                 <div class="col">
-					<h2>{% block content %}{% endblock %}</h2>
+					{% block content %}{% endblock %}
                 </div>
             </div>
         </div>
