--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{block title %}Opis o prjekcir{% endblock %}
-{% block content %}
+{% block title %}Opinie o produkcie{% endblock %} 
+{% block content %}  
                     <table id='opinions' class="table table-striped table-success">
                         <thead>
                             <tr>
@@ -19,7 +19,14 @@
                             </tr>
                         </tbody>
                     </table>
-{% endblock %}
-{% block scripts %}
-dopisać
-{% endblock %}
+                    {% endblock %}
+                 
+                    {% block script %}    
+                    
+        <script>
+            $(document).ready( function () {
+                $('#opinions').DataTable();
+            } );
+        </script>
+          
+   {% endblock %}
