--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <footer class="container alert alert-success fixed-bottom">
-            (c) Katarzyna Wójcik, Uniwersytet Ekonomiczny w Krakowie
+            (c) Maryana Shcherba, Uniwersytet Ekonomiczny w Krakowie
         </footer>
         {% block scripts %}{% endblock %}
     </body>
