--- a/app/templates/extract.html
+++ b/app/templates/extract.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}Ekstrakcja opinii{% endblock %}        
-{% block content %}           
+{% block title %}Pobieranie opinii o produkcie{% endblock %}
+{% block content %}
 <form method="POST" action="{{url_for('extract')}}">
     <div class="row g-3 align-items-center">
         <div class="col-auto">
@@ -15,3 +15,4 @@
     </div>
 </form>
 {% endblock %}
+               
