--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -1,15 +1,13 @@
 {% extends 'base.html' %}
-{% block title %}Opinie o produkcie{% endblock %} 
-{% block content %}  
+{% block title %}Opinie o produkcie{% endblock %}
+{% block content %}
 <h3>{{product_code}}</h3>
-{{opinions | safe}}
-{% endblock %}               
-{% block script %}    
-                    
-        <script>
-            $(document).ready( function () {
-                $('#opinions').DataTable();
-            } );
-        </script>
-          
-   {% endblock %}
+{{opinions|safe}}
+{% endblock %}
+{% block scripts %}
+<script>
+    $(document).ready( function () {
+        $('#opinions').DataTable();
+    } );
+</script>
+{% endblock %}
